--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//fortawesome
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+// TailwindCss
+//@tailwind base;
+//@tailwind components;
+//@tailwind utilities;
